# natty-guard

./: Cargo.toml  LICENSE  README.md  flake.nix  result
crates/client/: Cargo.toml  README.md  bpf
crates/client/src/: main.rs
crates/netlink-request/: Cargo.toml  README.md
crates/netlink-request/src/: request.rs
crates/wireguard-control/: Cargo.toml  README.md
crates/wireguard-control/src/: kernel.rs  lib.rs
