[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = { version = "0.4.4", features = [ "all"]}
libc =  "0.2.125"
nix = { version = "0.24.1", features = [ "socket", "user" ]}
clap = { version = "3.1.15", features = [ "derive" ]}
smol = "1.2.5"
futures = "0.3.21"
ctrlc = "3.2.2"
bytes = "1.1.0"
wireguard = { path = "../wireguard-control" }
