[package]
name = "wireguard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.125"
base64 = "0.13.0"
netlink-packet-wireguard = "0.2.1"
netlink-packet-generic = "0.3.0"
netlink-packet-core = "0.4.2"

netlink = { path = "../netlink-request"}
